--- a/css/title.css
+++ b/css/title.css
@@ -1,10 +1,10 @@
 .title {
     color: yellow;
-    text-shadow: 4px 4px 0px rgb(0, 56, 160);
+    text-shadow: 4px 4px 0px #000;
     margin-top: 15px;
     text-align: center;
     font-size: 60px;
     font-family: 'Bangers', cursive;
     -webkit-text-stroke-width: 3px;
-    -webkit-text-stroke-color: #000;
+    -webkit-text-stroke-color: rgb(0, 56, 160);
 }
