--- a/css/main-section.css
+++ b/css/main-section.css
@@ -1,8 +1,9 @@
 .main-section {
+    box-shadow: 4px 4px 4px #000;
     margin-left: 370px;
     align-items: center;
     border-radius: 50px;
-    background-color: #fff;
+    background-color: rgb(165, 162, 162);
     text-align: center;
     width: 600px;
     margin-bottom: 20px;
